--- a/_posts/2014-03-17-dots.md
+++ b/_posts/2014-03-17-dots.md
@@ -1,6 +1,6 @@
 ---
 layout: simple
-title: Not close. 
+title: Dots. 
 date:   2014-03-10
 slug: 2014-03-dots
 link: http://kpq.github.io/chartsnthings/2014/03/dots.html
