--- a/_posts/2014-04-04-rough-day.md
+++ b/_posts/2014-04-04-rough-day.md
@@ -2,7 +2,7 @@
 layout: simple
 title: A rough couple weeks. 
 date:   2014-04-04
-slug: 2014-04-rough
+slug: 2014-04-rough-day
 link: http://kpq.github.io/chartsnthings/2014/04/rough.html
 ---
 
